<resources>
    <string name="app_name">MetroAR</string>

    <!-- Textos da tela Home -->
    <string name="projetos">Projetos</string>
    <string name="nome_projeto">Nome do projeto</string>
    <string name="adicionar_projeto">Adicionar projeto</string>
    <string name="projetos_recente">Projetos acessados recentemente</string>
    <string name="inicio">Início</string>
    <string name="galeria">Galeria</string>
    <string name="welcome_title">Bem vindo!</string>
    <string name="welcome_subtitle">Escolha uma opção para começar</string>
    <string name="button_projects">Projetos</string>
    <string name="button_gallery">Galeria</string>
    <string name="nome_da_obra">Nome da Obra</string>
    <string name="ponto_de_vista">Ponto de Vista</string>
    <string name="descricao">Descrição</string>
    <string name="selecionar_pasta_existente">Selecionar pasta existente</string>
    <string name="criar_nova_pasta">Criar nova pasta</string>
    <string name="selecionar_pasta">Selecionar Pasta</string>
    <string name="flash">Flash</string>
    <string name="close">Fechar</string>
    <string name="capture">Capturar</string>
    <string name="home">Início</string>
    <string name="gallery">Galeria</string>
    <string name="capture_button">Capturar foto</string>
    <string name="flash_toggle">Alternar Flash</string>
    <string name="close_camera">Fechar câmera</string>
    <string name="go_home">Ir para Home</string>
    <string name="open_gallery">Abrir galeria</string>
    <string name="ar_mode">Modo AR</string>
</resources>