<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cameraContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">


    <io.github.sceneview.ar.ARSceneView
        android:id="@+id/arSceneView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <!-- Preview da câmera -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Botão de flash -->
    <ImageButton
        android:id="@+id/btnFlash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_gravity="top|start"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_flash_on"
        app:tint="@android:color/white"
        android:contentDescription="@string/flash" />

    <!-- Botão de fechar -->
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        app:tint="@android:color/white"
        android:contentDescription="@string/close" />

    <!-- Botão principal de captura -->
    <ImageButton
        android:id="@+id/btnCapture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_capture_button"
        android:contentDescription="@string/capture" />
    <!-- Botão AR -->

    <ImageButton
        android:id="@+id/btnAR"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="100dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_ar"
        app:tint="@android:color/holo_red_dark"
        android:contentDescription="@string/ar_mode" />

    <!-- Botão Home -->
    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_home_blue"
        android:contentDescription="@string/home" />

    <!-- Botão galeria -->
    <ImageButton
        android:id="@+id/btnGallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_gallery"
        android:contentDescription="@string/gallery" />

</FrameLayout>