<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/folder_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <RadioButton
            android:id="@+id/radio_select_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecionar_pasta_existente"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_create_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_nova_pasta"
            android:layout_marginStart="12dp" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_folder_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selecionar_pasta">
        <AutoCompleteTextView
            android:id="@+id/dialog_folder_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_folder_create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/criar_nova_pasta"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_folder_new_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>